# swxg

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
docs/source/: conf.py  getting-started.rst  index.rst
docs/source/api/: index.rst  model.rst
docs/source/api/fit/: index.rst
docs/source/api/make_figures/: index.rst
docs/source/api/synthesize/: index.rst
docs/source/examples/: index.rst
docs/source/iocontrol/: index.rst
docs/source/pretreatment/: index.rst
docs/source/validation/: index.rst
example_figures/: README.md
src/base/: __init__.py  model.py
src/generator/: CMIP6BiasCorrector.py  GMMHMMandCopulaConstructor.py  GenerateSOTWs.py  PlotSyntheticPT.py  SynthesizePT.py  __init__.py  fit.py  make_figures.py  model.py  synthesize.py  validate.py
swxg/: .nfs1669bbd82b15958b0001ec99  .nfsf8954ade9db01c0900568f48  .nfsfe204721fdce60ae000e5d71  PlotGMMHMMandCopulae.py  __init__.py  fit.py  make_figures.py  model.py  synthesize.py
swxg/test_wx/: __init__.py  example_daily.pkl  example_monthly.pkl
tests/: NOAA_UCRBMonthly.csv  test_base.py  test_generator.py
